Changelog
=========

9.5.dev0 - (unreleased)
-----------------------

9.4 - (2015-05-26)
------------------
* Bug fix: Keep Job within wk.py for backward compatibility
  [voineali refs #25755]

9.3 - (2015-05-05)
------------------
* Change: changed footer and header templates in order to preserve template
  logic when using static headers and footer
  [ichimdav refs #23904]

9.2 - (2015-04-02)
------------------
* Feature: added the possibility to limit the header tags that appear within
  the table of contents
  [ichimdav refs #24351]

9.1 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins builds install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins builds install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

9.0 - (2015-02-25)
------------------
* Bug fix: Fixed UnicodeDecodeError within download.pdf template
  [voineali refs #23338]
* Cleanup: Remove deprecated **make_pdf_cover** from download.pdf
  [voineali refs #22971]
* Change: Moved async API from eea.pdf to eea.converter in order to reuse it
  for other async jobs (e.g. eea.epub)
  [voineali refs #22971]

8.7 - (2015-02-16)
------------------
* Feature: Update ISupport API with async and email methods
  [voineali refs #22971]
* Feature: Added possibility to use specific ZPT macro while exporting PDF body
  (e.g. content-core)
  [voineali refs #22686]

8.6 - (2014-12-23)
------------------
* Bug fix: Use *with* statement with temporary files in order to ensure that they
  are safely closed before exit
  [voineali refs #22080]
* Bug fix: While creating authentication cookie-jar, also be aware of
  CDN resources
  [voineali refs #22080]

8.5 - (2014-12-02)
------------------
* Bug fix: Added possibility to define shared temporary directory using os.env
  EEACONVERTER_TEMP in order to avoid surprises while using together with zc.async
  [voineali refs #21958]

8.4 - (2014-11-28)
------------------